fix contacts-a, fix contact-us-block on mobiles && add some changes: photo, icons, hover, font

--- a/src/styles/blocks/header/header.scss
+++ b/src/styles/blocks/header/header.scss
@@ -2,7 +2,7 @@
   // display: none !important;
   background-image: url(../images/Cover_photo-3x.png);
   background-size: cover;
-  background-position: center;
+  background-position: center right 15%;
 
   &__content {
     height: 100vh;
@@ -19,9 +19,27 @@
     font-weight: 700;
     line-height: 100%; /* 36px */
     letter-spacing: -1.5px;
+
+    @include onTablet {
+      font-size: 64px;
+      line-height: 64px;
+    }
+
+    @include onDesktop {
+      font-size: 80px;
+      line-height: 80px;
+    }
   }
 
   &__bottom {
     padding-bottom: 88px;
+
+    @include onTablet {
+      padding-bottom: 130px;
+    }
+
+    @include onDesktop {
+      padding-bottom: 203px;
+    }
   }
 }
