--- a/src/styles/blocks/header/icon.scss
+++ b/src/styles/blocks/header/icon.scss
@@ -10,12 +10,39 @@
     width: 32px;
   }
 
+  @include onDesktop {
+    &:hover {
+      transition: 0.3s;
+      transform: scale(1.2);
+    }
+  }
+
   &--phone {
     background-image: url(../images/icons/icon-phone.svg);
+
+    &:hover::before {
+      color: #fff;
+      content: "";
+      position: absolute;
+      top: 40px;
+      left: -120px;
+
+      @include onTablet {
+        content: "+1 234 555-55-55";
+        position: absolute;
+        top: 5px;
+        left: -150px;
+      }
+    }
   }
 
   &--menu {
     background-image: url(../images/icons/icon-burger-menu.svg);
+
+    &:hover {
+      transition: 0.3s;
+      background-image: url(../images/icons/icon-burger-menu-hover.svg);
+    }
   }
 
   &--close {
