--- a/src/styles/blocks/header/page.scss
+++ b/src/styles/blocks/header/page.scss
@@ -5,6 +5,10 @@
   color: $main-text-color;
   scroll-behavior: smooth;
 
+  &:has(.page__menu:target) {
+    overflow: hidden;
+  }
+
   &__body {
     margin: 0;
   }
