--- a/src/styles/blocks/main/compare-bikes.scss
+++ b/src/styles/blocks/main/compare-bikes.scss
@@ -16,3 +16,16 @@
     }
   }
 }
+
+.product {
+  &__photo {
+    cursor: pointer;
+  }
+
+  &__title,
+  &__price {
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 140%; /* 33.6px */
+  }
+}
