--- a/src/styles/blocks/main/contacts.scss
+++ b/src/styles/blocks/main/contacts.scss
@@ -1,5 +1,6 @@
 .contacts-wrapper {
   @include pageGrid;
+  --columns: 1;
 }
 
 .contacts-form {
@@ -21,6 +22,10 @@
     border-radius: 16px;
     margin: 0 0 32px;
     resize: none;
+  }
+
+  &__button {
+    margin-bottom: 48px;
   }
 }
 
@@ -57,5 +62,10 @@
     font-size: 16px;
     font-weight: 500;
     line-height: 140%; /* 22.4px */
+
+    transition: 0.3s;
+    &:hover {
+      color: grey;
+    }
   }
 }
